--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ padding-bottom: 160px;">
                 </div>
                 <p id="bar-answer" class="v-hidden">
                     <strong>Avec pas moins de 150 bars</strong>, vous n’aurez que l’embarras du choix pour aller boire un verre !<br>
-                    Limoges est aussi reconnue pour sa gastronomie avec notamment deux évènements emblématiques : <strong>La Frairie des petits ventres</strong> et la biennale <strong>Toques et Porcelaine</strong>.
+                    Limoges est aussi reconnue pour sa gastronomie avec notamment deux évènements emblématiques :<br><strong>La Frairie des petits ventres</strong> et la biennale <strong>Toques et Porcelaine</strong>.
                 </p>
             </div>
             <div id="q2" class="question tc">
@@ -143,7 +143,8 @@ echo "Quelles technos pratiquez-vous ?";
             </div>
             <div id="fini" class="question tc flex flex-column justify-between">
                 <p>C'est fini !</p>
-                <p>Vous souhaitez participer au tirage au sort et tenter de gagner un drone ?<br><br>Entrez votre email : <input id="email" type="email" class="w-60 tc" name="email" placeholder="email" value=""></p>
+                <p>Vous souhaitez participer au tirage au sort et tenter de gagner un drone ?<br><br>Entrez votre email : <input id="email" type="email" class="w-60 tc" name="email" placeholder="email" value=""> <span class="info" title="En participant à ce quizz, vous nous autorisez à conserver vos données à des fins de statistiques.
+A tout moment, vous pouvez demander la suppression de vos données par mail à dpd@neo-soft.fr">i</span></p>
                 <p>
                     Pourquoi ne pas rester en contact sur
                     <svg id="Group_1280" class="linkedin-logo" data-name="Group 1280" xmlns="http://www.w3.org/2000/svg" width="267.504" height="65.326" viewBox="0 0 267.504 65.326">
@@ -174,44 +175,6 @@ echo "Quelles technos pratiquez-vous ?";
 </div>
 <script type="text/javascript" src="assets/js/index.js"></script>
 <script type="text/javascript" src="assets/js/quizz.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+<script type="text/javascript" src="assets/js/run_prettify.js"></script>
 </body>
 </html>
-
-<!--
-<div class="dn">
-
-                    <div class="form-group">
-                        <label for="nom">Votre nom</label>
-                        <div class="form-control">
-                            <input type="text" name="nom" id="nom" placeholder="Nom"/>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="prenom">Votre prénom</label>
-                        <div class="form-control">
-                            <input type="text" name="prenom" id="prenom" placeholder="Prénom"/>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="fonction">Votre fonction</label>
-                        <div class="form-control">
-                            <input type="text" name="fonction" id="fonction" placeholder="Fonction"/>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="email">Votre email</label>
-                        <div class="form-control">
-                            <input type="email" name="email" id="email" placeholder="@"/>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label><input type="checkbox" name="accept_coord"> J'accepte de fournir ces informations pour éventuellement être recontacté par le service RH de Néo-Soft.</label>
-                        <p class="hint">Ces données ne sont pas cédées à un tier et vous pouvez exercer votre droit de modification ou de suppression en écrivant à <a href="mailto:emilie.vacher@neo-soft.fr">emilie.vacher@neo-soft.fr</a>.</p>
-                    </div>
-                </div>
--->
